--- a/webClient/src/features/home/home.html
+++ b/webClient/src/features/home/home.html
@@ -17,8 +17,8 @@
       </div>
     </div>
   } @else {
-    <div class="text-xl text-center flex justify-center">
-      Register form go here
+    <div class="w-full text-xl text-center flex justify-center">
+      <app-register class="w-full"/>
     </div>
   }
 </div>
